tests/ui/scalar_types_sqlite/fail/to_timestamp_requires_postgres.stderr
error[E0277]: this date/time function is not available for this dialect
 --> tests/ui/scalar_types_sqlite/fail/to_timestamp_requires_postgres.rs:5:13
  |
5 |     let _ = to_timestamp(raw_non_null::<SQLiteValue, drizzle::sqlite::types::Integer>("1700000000"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use a dialect-specific alternative
  |
  = help: the trait `PostgresDateTimeSupport` is not implemented for `SQLiteDialect`
help: the trait `PostgresDateTimeSupport` is implemented for `PostgresDialect`
 --> core/src/expr/datetime.rs
  |
  | impl PostgresDateTimeSupport for PostgresDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `to_timestamp`
 --> core/src/expr/datetime.rs
  |
  | pub fn to_timestamp<'a, V, E>(expr: E) -> SQLExpr<'a, V, PgTimestamptz, E::Nullable, Scalar>
  |        ------------ required by a bound in this function
...
  |     V::DialectMarker: PostgresDateTimeSupport,
  |                       ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `to_timestamp`
